# flexpart-ifs-preprocessor

./: .mch-ci.yml  Dockerfile  Jenkinsfile  README.rst  pyproject.toml  sonar-project.properties
doc/: Makefile  conf.py  index.rst
doc/_templates/: version.html
flexpart-ifs-preprocessor/config/: settings.yaml
flexpart_ifs_preprocessor/: __init__.py  __main__.py  flexpart_ifs_preprocessor.py
flexpart_ifs_preprocessor/config/: settings.py  settings.yaml
flexpart_ifs_preprocessor/domain/: data_model.py  db_utils.py  processing.py  s3_utils.py  write_grib.py
flexprep/: __main__.py
flexprep/domain/: processing.py
test/: conftest.py  test_lambda_handler.py  test_main.py
test/domain/: test_data_model.py  test_db_utils.py  test_processing.py  test_s3_utils.py
test/resources/: s4y_f2_ifs-da_od_oper_an_20260408T000000Z_20260408T000000Z_0h
